--- a/app/views/widgets/single_column/_chapman_events_feed.html
+++ b/app/views/widgets/single_column/_chapman_events_feed.html
@@ -1,6 +1,6 @@
 <div class="chapman-events-feed-widget">
   <div class="outer-container">
-    
+
     <div data-chapman-events-feed="http://events.chapman.edu/">
       <div class="section-message">
         <h4 class="category">category</h4>
@@ -10,8 +10,10 @@
             Students at Chapman University's Dodge College of Film and Media Arts are part of a rich culture of student life and making. Involved in making their own work from day one, students are also immersed into the culture of their industry.  Events happen throughout the year, providing advanced screenings and special guests.
           </p>
         </div>
-        <div class="actions"><a class= "button red">Dodge Events Calendar</a></div>
       </div>
+    </div>
+    <div class="actions">
+      <a href="https://events.chapman.edu" class="events-feed-url">Dodge Events Calendar</a>
     </div>
   </div>
 </div>
