--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -231,3 +231,13 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+
+@mixin form-control-focus($color) {
+  $color-rgba:   rgba(red($color), green($color), blue($color), 0.6);
+  $border-color: rgba(red($color), green($color), blue($color), 0.8);
+  &:focus, &:active {
+    border-color: $border-color;
+    outline: 0;
+    box-shadow: 0 0 5px $color-rgba;
+  }
+}
