--- a/app/views/widgets/right_column/_simple_form.html
+++ b/app/views/widgets/right_column/_simple_form.html
@@ -1,39 +1,105 @@
 <div class="simple-form-widget">
-    <div class="callout short-form">
-        <h2>
-        This is the title thingy for the form and it's kindof long
-    </h2>
-        <form action="http://webfarm.chapman.edu/mailservice/formmail.aspx" id="short-form" method="post" name="BREI_TEST">
-            <input name="sender" type="hidden" value="webmaster@chapman.edu" />
-            <input name="recipient" type="hidden" value="mthomas@chapman.edu" />
-            <input name="mail_format" type="hidden" value="html" />
-            <input name="subject" type="hidden" value="This is a test email" />
-            <input name="table" type="hidden" value="BREI_TEST" />
-            <div>
-                <textarea id="short-response" name="response" placeholder="Type your answer here"></textarea>
-            </div>
-            <div>
-                <input id="short-email" name="email" placeholder="Type your email (optional)" type="text" />
-            </div>
-            <div>
-                <select id="short-choice" name="choice">
-                    <option value="one">
-                        Choice One
-                    </option>
-                    <option value="two">
-                        Choice Two
-                    </option>
-                </select>
-            </div>
-            <div>
-                <input id="short-submit" type="submit" value="Submit" />
-            </div>
-            <!-- The following code is invisible to people and
+        
+<script src="/_files/js/form_validation.js" type="text/javascript"></script>
+<script language="JavaScript" type="text/javascript">
+<!--
+function validate() {
+    var formObj = document.form1;
+
+   if (formObj.requestor_name.value == "your name") {
+       alert("Please enter in your first and last name");
+       formObj.requestor_name.focus();
+       return false;
+   }
+   else if (formObj.requestor_name.value.length == 0) {
+       alert("Please enter in your first and last name");
+       formObj.requestor_name.focus();
+       return false;
+   }
+   else if (formObj.email.value == "your email") {
+       alert("Please enter an email address where we may contact you");
+       formObj.email.focus();
+       return false;
+   }   
+   else if (formObj.email.value.length == 0) {
+       alert("Please enter an email address where we may contact you");
+       formObj.email.focus();
+       return false;
+   }   
+   else if (checkEmail(formObj.email) != true) {
+    formObj.email.focus();
+    return false;
+   }
+    else {        
+        // get meta tag og:url and put value (current page url) into redirect_url for mailservice to send user back here;
+        //also populate form_url field from same og:url so can store in sql db (mult pages use same form):
+        var x=document.getElementsByTagName("meta");
+        for (var i=0;i<x.length;i++) {
+              att=x.item(i).attributes.getNamedItem("property");
+              var attr_list = x[i].attributes;
+              for (var j=0;j<attr_list.length;j++) { 
+                  if (attr_list[j].name == 'property' && attr_list[j].value == 'og:url') {
+                    formObj.form_url.value = x[i].content;
+                  }
+                  
+              }
+        }
+        alert("Submitted.");      
+        return true;
+    }
+}
+//-->
+</script>
+
+<div class="callout short-form">
+<form action="https://webfarm.chapman.edu/mailservice/formmail.aspx" id="form1" method="post" name="form1" onsubmit="return validate(this);">
+  <input name="recipient" type="hidden" value="llm@chapman.edu;steiner@chapman.edu;yeung@chapman.edu;gwillis@chapman.edu;dfinley@chapman.edu">
+    <input name="sender" type="hidden" value="webmaster@chapman.edu">
+    <input name="subject" type="hidden" value="Law School LLM Program Inquiry from web">
+    <input name="mail_format" type="hidden" value="html">
+    <input name="table" type="hidden" value="law_llm_request_info">
+  <input name="redirect_url" type="hidden" value="http://www.chapman.edu/law/academic-programs/llm/request-information-thank-you.aspx"> 
+  <!-- version of this form page we're on (block uses on multiple pages). Populated using JS from og:url meta field: -->
+    <input name="form_url" type="hidden" value="">
+  
+<div><h3>Request Information</h3></div>
+<div>Complete this form to stay informed about our programs, important deadlines &amp; news. Please let us know if you have any questions.</div>      <div>  
+              <input maxlength="50" name="requestor_name" placeholder="your name" size="20" type="text">
+       </div>
+       <div> 
+              <input id="email" maxlength="50" name="email" placeholder="your email" size="20" type="text">
+       </div>
+        <div> 
+              
+             <p>Areas of interest:<br>(check all that apply)</p>
+          <fieldset>
+              <input id="business_law" name="emphasis_area" type="checkbox" value="Business Law"><label for="business_law">Business Law</label>              
+              <br>            
+              <input id="entertainment_law" name="emphasis_area" type="checkbox" value="Entertainment and Media Law"><label for="entertainment_law">Entertainment/Media Law</label>
+            <br>  
+              <input id="international_law" name="emphasis_area" type="checkbox" value="International and Comparative Law"><label for="international_law">Intl. and Comparative Law</label>
+            <br>  
+              <input id="double" name="emphasis_area" type="checkbox" value="LL.M.-MBA Double Masters"><label for="double">LL.M.-MBA Double Masters</label>
+            <br>  
+              <input id="taxation" name="emphasis_area" type="checkbox" value="Taxation"><label for="taxation">Taxation</label>
+            <br>  
+              <input id="trial_advocacy" name="emphasis_area" type="checkbox" value="Trial Advocacy (with Court Residency)"><label for="trial_advocacy">Trial Advocacy (with Court Residency)</label>
+               
+                  
+              </fieldset>
+            <br><br>  
+            Comments:
+            <textarea cols="50" id="comments" name="comments" rows="4"></textarea>
+       </div>
+       <div><input name="submit" type="submit" value="Submit">
+       </div>
+       <!-- The following code is invisible to people and
      contains some trap text fields-->
-            <div style="display:none;">
-                If you can read this, don't touch the following field:
-                <input name="address_bot" type="text" value="" />
-            </div>
-        </form>
+    <div style="display:none;">
+      If you can read this, don't touch the following field: <input name="address_bot" type="text" value="">
     </div>
+</form>
 </div>
+<script language="JavaScript" type="text/javascript" src="/_files/js/form_validation.js"></script>
+
+    </div>
