--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -4,7 +4,10 @@
     width: 100%;
     background-color: $cu-off-white;
     position: relative;
-    li { list-style-type: none; }
+    li { 
+      list-style-type: none;
+      margin: 0;
+    }
 		> li {
 			&.active > {
 				a {
@@ -60,40 +63,17 @@
 	          // background-size: 105px;
 	          text-indent: -50px;
 	          position: absolute;
-	          // bottom: 0;
-	          // right: 0;
 	          right: 12px;
-	          // top: 0;
 	          top: 6px;
-	          // width: 28px;
 	          width: 21px;
 	          height: 21px;
 	          overflow: hidden;
 	          visibility: hidden;
 	          display: block;
-            // font-family: arial;
-            // font-weight: bold;
-            // text-decoration: none;
-            // text-align: center;
-	          &:before {
-							// content: '';
-							// position: absolute;
-							// top: 5px;
-							// bottom: 5px;
-							// left: 0;
-							// right: 0;
-							// border-left: 1px solid #595858;
-	          }
 	          &:hover {
-	          	// background-color: #AFADAD;
 	            background-position: -100px 0px;
-	            &:before {
-	            	// border-color: #AFADAD;
-	            	// background-position: -15px 1px;
-	            }
 	          }
 	          &.open {
-	          	// background-position: -17px center;
 	            background-position: -79px -21px;
 	            &:hover {
 	              background-position: -100px -21px;
@@ -109,23 +89,12 @@
 	}
   a {
     font-family: "proxima-nova-soft", "proxima-nova-soft-n4", sans-serif;
-    // color: #212121;
     display: block;
-    // padding: 4px 0 0 0;
     padding: 7px 0 0 0;
   }
   .active > {
     a {
       font-weight: 700;
-      // font-family: "Open Sans";
-      // font-family: "proxima-nova", sans-serif;
-      // font-weight: 400;
-      // font-size: 15px;
-      // background-color: $black;
-      // color: $white;
-      &:hover {
-      	// background-color: $black;
-      }
     }
     ul > li > a > .bullet {
       display: none;
