--- a/app/assets/stylesheets/components/callout.scss
+++ b/app/assets/stylesheets/components/callout.scss
@@ -1,10 +1,15 @@
 .callout {
+  @include clearfix;
   background-color: #e2e1dc;
   border-right: 1px solid #c0c0b8;
   border-bottom: 1px solid #c0c0b8;
   padding: 10px;
   margin: 10px 0 10px 0;
-  @include clearfix;
+  width: 195px;
+  @include bp(l) {
+    width: 100%;
+  }
+
 
   h3 { margin: 5px 0 5px 0; }
 }
