--- a/app/views/3_column/form_on_the_right.html.erb
+++ b/app/views/3_column/form_on_the_right.html.erb
@@ -4,7 +4,10 @@
     - primary_content/form_1
 
   right_column:
+    - right_column/callout_box
+    - right_column/callout_box_1
     - right_column/simple_form
+    - right_column/action_buttons
 
   YAML
 %>
