--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -1,12 +1,19 @@
 .side-panel-hero {
   position: relative;
 
-  .background-image {
+  .background-image, .background-video {
     position: absolute;
     top: 0; right: 0; left: 0; bottom: 0;
     height: 100%; width: 100%;
+  }
+
+  .background-image {
     background-size: cover;
     background-repeat: no-repeat;
+  }
+
+  .background-video {
+    background-size: cover;
   }
 
   .hero-content {
