--- a/app/views/layouts/1_column.html.erb
+++ b/app/views/layouts/1_column.html.erb
@@ -8,7 +8,7 @@
 <!--[if IE 8]>    <body class="ie8 oldie phaseFour"> <![endif]-->
 <!--[if gt IE 8]><!-->
 
-<body>
+<body id="theme" class="<%= yield(:theme) %>">
     <!--<![endif]-->
     <span class="hidden"><a href="#main" title="Skip navigation and jump directly to the main content of this page">Jump to the main content of this page</a></span>
 
