--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -1,5 +1,9 @@
 <div class="side-panel-hero">
-  <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); "></div>
+  <!-- <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); "></div> -->
+
+  <video autoplay class="background-video">
+    <source src="https://www.chapman.edu/_files/img/hero-panels/html5-videos/surf.mp4" type="video/mp4">
+  </video>
   
   <div class="hero-content">
     <section>
@@ -9,9 +13,9 @@
         Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
       </p>
       <nav>
-        <a href="#">Programs and Majors</a>
-        <a href="#">Visit Dodge</a>
-        <a href="#">Admission Information</a>
+        <a href="#" class="theme-primary-bg">Programs and Majors</a>
+        <a href="#" class="theme-primary-bg">Visit Dodge</a>
+        <a href="#" class="theme-primary-bg">Admission Information</a>
       </nav>
     </section>
 
