--- a/app/assets/stylesheets/themes/wilkinson.scss
+++ b/app/assets/stylesheets/themes/wilkinson.scss
@@ -1,6 +1,7 @@
 
 #theme.wilkinson {
-
+  @include theme-color-classes($wilkinson-primary, $wilkinson-secondary);
+  
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $wilkinson-primary; /* Old browsers */
   	background: -moz-radial-gradient(center, ellipse cover, $wilkinson-primary 1%, $wilkinson-secondary 93%); /* FF3.6+ */
