--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -1,7 +1,7 @@
 .side-panel-hero {
   position: relative;
 
-  .background-image, .background-video {
+  .background-image, .background-video-wrapper {
     position: absolute;
     top: 0; right: 0; left: 0; bottom: 0;
     height: 100%; width: 100%;
@@ -12,41 +12,36 @@
     background-repeat: no-repeat;
   }
 
-  .background-video {
-    background-size: cover;
-  }
-
   .hero-content {
     @include outer-container;
     padding-top: $base-spacing*3;
-    margin-bottom: 5%;
+    margin-bottom: 64px;
     position: relative;
   }
 
   // The side panel
   section {
     @include span-columns(6);
-    margin-bottom: -5%;
+    margin-bottom: -64px;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.95);
     padding: $base-spacing*3;
 
     // Subtitle
-    h2 { font-weight: 100; }
-
-    nav {
+    h2 { font-weight: 200; }
+    
+    // Calls to action
+    nav { 
       margin-top: $base-spacing*3;
+      a {
+        @include button($blue);
+        width: 100%;
+        margin-bottom: $base-spacing;
+        text-align: center;
+        line-height: 36px;
+        border-radius: 0px;
+      }
     }
-  }
-
-  // The calls to action
-  nav a {
-    @include button($blue);
-    width: 100%;
-    margin-bottom: $base-spacing;
-    text-align: center;
-    line-height: 36px;
-    border-radius: 0px;
   }
 
   // The featured article
@@ -55,7 +50,7 @@
     @include shift(1);
     margin-top: 35%;
     padding: $base-spacing*2 $base-spacing*3;
-    background-color: black;
+    background-color: rgba(0,0,0,0.95);
     color: white;
     border-radius: 3px;
     
@@ -69,7 +64,7 @@
     
     h3 { // Subtitle
       margin-top: 0;
-      font-weight: 100;
+      font-weight: 200;
     }
   } 
 }
