--- a/app/views/1_column/hero_side_panel.html.erb
+++ b/app/views/1_column/hero_side_panel.html.erb
@@ -3,6 +3,7 @@
 
 <%= widgets <<-YAML
     primary_content:
-      - hero/side_panel
+      - hero/side_panel_video
+      - single_column/chapman_events_feed 
   YAML
 %>
