--- a/app/views/widgets/hero/_side_panel_video.html
+++ b/app/views/widgets/hero/_side_panel_video.html
@@ -1,5 +1,10 @@
 <div class="side-panel-hero">
-  <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); "></div>
+
+  <div class="background-video-wrapper">
+    <video width="100%" height="100%" class="background-video" autoplay loop poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
+      <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
+    </video>
+  </div>
   
   <div class="hero-content">
     <section>
