--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -14,15 +14,13 @@
 
   .hero-content {
     @include outer-container;
-    padding-top: $base-spacing*3;
-    margin-bottom: 64px;
+    padding: $base-spacing*3 0;
     position: relative;
   }
 
   // The side panel
   section {
     @include span-columns(6);
-    margin-bottom: -64px;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
     background-color: rgba(255, 255, 255, 0.95);
     padding: $base-spacing*3;
