--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -2,28 +2,42 @@
   position: relative;
 
   .background-image, .background-video-wrapper {
-    position: absolute;
-    top: 0; right: 0; left: 0; bottom: 0;
-    height: 100%; width: 100%;
+    display: none;
+    @include media($large-screen) {
+      display: block;
+      position: absolute;
+      top: 0; right: 0; left: 0; bottom: 0;
+      height: 100%; width: 100%;
+    }
   }
 
   .background-image {
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center bottom;
   }
 
   .hero-content {
     @include outer-container;
-    padding: $base-spacing*3 0;
     position: relative;
+    padding: 0;
+    @include media($medium-screen) {
+      padding: $base-spacing*3;
+    }
+    @include media($large-screen) {
+      padding: $base-spacing*3 0;
+    }
   }
 
   // The side panel
   section {
-    @include span-columns(6);
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
-    background-color: rgba(255, 255, 255, 0.95);
     padding: $base-spacing*3;
+    background-color: white;
+
+    @include media($large-screen) {
+      @include span-columns(6);
+    }
 
     // Subtitle
     h2 { font-weight: 200; }
@@ -44,14 +58,31 @@
 
   // The featured article
   article {
-    @include span-columns(10);
-    @include shift(1);
-    margin-top: 35%;
-    padding: $base-spacing*2 $base-spacing*3;
+    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
     background-color: rgba(0,0,0,0.95);
     color: white;
-    border-radius: 3px;
-    
+
+    @include media($medium-screen) {
+      margin-top: $base-spacing*3;
+    }
+
+    @include media($large-screen) {
+      @include span-columns(10);
+      @include shift(1);
+      margin-top: 35%;
+      border-radius: 3px;
+    }
+
+    img,video {
+      width: 100%;
+      height: auto;
+      @include media($large-screen) { display: none; }
+    }
+
+    .content {
+      padding: $base-spacing*2 $base-spacing*3;
+    }
+
     span { // Category
       @include content_label(); 
     }
