--- a/app/views/widgets/hero/_side_panel_video.html
+++ b/app/views/widgets/hero/_side_panel_video.html
@@ -21,12 +21,17 @@
     </section>
 
     <article>
-      <span>Beyond Dodge</span>
-      <h2>New Orleans Becoming Hollywood South</h2>
-      <h3>Alumni Discuss the film industry in New Orleans</h3>
-      <p>
-        What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...<a href="#">Read more on dodge</a>
-      </p>
+      <video controls poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
+        <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
+      </video>
+      <div class="content">
+        <span>Beyond Dodge</span>
+        <h2>New Orleans Becoming Hollywood South</h2>
+        <h3>Alumni Discuss the film industry in New Orleans</h3>
+        <p>
+          What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...<a href="#">Read more on dodge</a>
+        </p>
+      </div>
     </article>
   </div>
 </div>
