--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -1,6 +1,11 @@
 .side-panel-hero {
   position: relative;
 
+
+  + div { // Whatever is under this hero area should have double padding to account for the overlap
+    padding-top: $one-column-widget-spacing*2;
+  }
+
   .background-image, .background-video-wrapper {
     display: none;
     @include media($large-screen) {
@@ -22,22 +27,26 @@
     position: relative;
     padding: 0;
     @include media($medium-screen) {
-      padding: $base-spacing*3;
+      padding: $one-column-widget-spacing;
     }
     @include media($large-screen) {
-      padding: $base-spacing*3 0;
+      padding: $one-column-widget-spacing 0;
     }
   }
 
   // The side panel
   section {
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
-    padding: $base-spacing*3;
+    padding: $one-column-widget-spacing;
     background-color: white;
 
     @include media($large-screen) {
       @include span-columns(6);
+      margin-bottom: -$one-column-widget-spacing*2;
     }
+
+    // Title
+    h1 { margin-top: 0; }
 
     // Subtitle
     h2 { font-weight: 200; }
@@ -73,7 +82,7 @@
       border-radius: 3px;
     }
 
-    img,video {
+    img, video {
       width: 100%;
       height: auto;
       @include media($large-screen) { display: none; }
