Added spacing to the video player

--- a/app/assets/stylesheets/components/editable_content.scss
+++ b/app/assets/stylesheets/components/editable_content.scss
@@ -27,6 +27,7 @@
     padding-bottom: 56.25%;
     height: 0;
     overflow: hidden;
+    margin-bottom: $base-spacing;
 
     iframe, object, embed {
       position: absolute;
