--- a/app/views/widgets/primary_content/_regions_1.html
+++ b/app/views/widgets/primary_content/_regions_1.html
@@ -1,52 +1,41 @@
 <div class="regions-widget">
                     <div class="region">
-            <h3>Student Opportunities</h3>  
+            <h3>Role of Student Organization Advisor</h3>  
             <div class="content">
             <p>
-                <img alt="Student Opportunities" class="featureImage" height="150" src="../_files/civic-engagement/images/region-dayofservice.png" width="200">
-                Students can participate in a&nbsp;<a href="programs/index.aspx">variety of experiences</a>&nbsp;throughout the year to develop a strong sense of civic identity and a deep commitment to civic engagement. &nbsp;From short-term opportunities that introduce students to our local community and public issues, to long-term commitments for students looking for immersive civic experiences, Civic Engagement Initiatives supports each student's civic development!
-            </p>
-                            <ul class="linkList">
-                                                                                                     <li>
-                         
-                         </li>
-                                                    </ul>
-            </div>
-                    </div>
-                    <div class="region">
-            <h3>Community Agencies</h3>  
-            <div class="content">
-            <p>
-                <img alt="Community Agencies" class="featureImage" height="150" src="../_files/civic-engagement/images/region-maryskitchen.png" width="200">
-                </p><p>Interested in becoming a partner in our civic engagement initiatives? There are many ways in which community agencies can&nbsp;<a href="community-agencies.aspx">connect with Chapman</a>!&nbsp;</p>
+                <img alt="Campus flag" class="featureImage" height="150" src="../_files/clubs-organizations/images/region-leaders.png" width="200">
+                </p><p>Advisors are encouraged to talk with student leaders to co-create the role, responsibilities, and time commitment of the advisor for that specific organization. Whatever is decided, the advisor can play a critical role in supporting the organization while still allowing it to run independently so students can gain valuable leadership experience with their peers.</p>
+<p>Some of the responsibilities the advisor may want to consider are:</p>
+<ul>
+<li>Help the club navigate campus <a href="../../../campus-services/marketing-communication/services/events/event-planning-guide/index.aspx" target="_blank" title="Event Planning Guide">resources, policies &amp; procedures</a></li>
+<li>Assist the club in developing an understanding of fulfilling its mission and purpose at Chapman</li>
+<li>Ensure that the organization maintains <a href="manage.aspx" target="_blank" title="Manage Your Organization Page">good standing</a> by attending President's Council and submitting the End of Semester report</li>
+<li>Be a liaison between the club and the University – share chapter successes and university information</li>
+<li>Challenge and support the club to continuously grow and improve</li>
+<li>Promote the Chapman University <a href="../../policies-forms/student-conduct/index.aspx" target="_blank" title="Student Conduct Code">Code of Conduct</a> and the <a href="../../../about/facts-history/index.aspx" target="_blank" title="Chapman Facts &amp; History Page">mission of the University</a></li>
+</ul>
             <p></p>
                             <ul class="linkList">
                                                                                                      <li>
                          
                          </li>
-                                                                                                                         <li>
-                         
-                         </li>
                                                     </ul>
             </div>
                     </div>
                     <div class="region">
-            <h3>Faculty &amp; Staff</h3>  
+            <h3>Resources</h3>  
             <div class="content">
             <p>
-                <img alt="Faculty and Staff" class="featureImage" height="150" src="../_files/civic-engagement/images/region-asb.png" width="200">
-                Civic Engagement Initiatives has a number of resources and opportunities to <a href="faculty-staff.aspx">support and engage faculty and staff</a>.
-            </p>
+                <img alt="Resources" class="featureImage" height="150" src="../_files/clubs-organizations/images/clubs1.jpg" width="200">
+                </p><p><a href="../../../campus-services/marketing-communication/services/events/event-planning-guide/index.aspx" target="_blank" title="Event Planning Guide">Event Planning Guide</a>&nbsp;– A step-by-step guide to navigating event planning at Chapman University! Includes contact information for relevant campus departments, as well as information, links and forms for contracts, vendors, calendaring, media services, facilities, catering, and more.</p>
+<p><a href="http://chapman.orgsync.com/" target="_blank" title="Chapman OrgSync Page">OrgSync</a>&nbsp;- Search all student organizations &amp; departmental student involvement opportunities, find contact info for organization leaders &amp; advisors, request to join organizations, and manage communication with your club.</p>
+<p><a href="../student-government/index.aspx" target="_blank" title="SGA Page">Student Government Association</a>&nbsp;– See the sections on finance and Senate for information on organization funding, conference scholarship, and student organization advocacy.</p>
+<p><a href="http://www.acui.org/publications/bulletin/article.aspx?issue=22644&amp;id=13298" target="_blank" title="ACUI Article">Advisor Involvement and Retention</a>&nbsp;– Article from Association of Colleges Unions International (ACUI) about the role and impact of student organization advisors and factors that influence advisor involvement.</p>
+            <p></p>
                             <ul class="linkList">
-                                                                                                    <li>
-                        <a href="programs/alternative-spring-break.aspx">Serve as an Alternative Break Trip Advisor&nbsp;»</a>
-                        </li>
-                                                                                                                        <li>
-                        <a href="programs/day-of-service.aspx">Participate in the Chapman Day of Service&nbsp;»</a>
-                        </li>
-                                                                                                                        <li>
-                        <a href="http://www.tanakafarms.com/sign-up/">Subscribe to Tanaka Farms' CSA (Pick-Up at Chapman)&nbsp;»</a>
-                        </li>
+                                                                                                     <li>
+                         
+                         </li>
                                                     </ul>
             </div>
                     </div>
