--- a/app/assets/stylesheets/widgets/primary_column/personnel_region.scss
+++ b/app/assets/stylesheets/widgets/primary_column/personnel_region.scss
@@ -2,6 +2,10 @@
   padding: $primary-column-widget-spacing 0;
 
   .person {
+    &:first-child {
+      border-top: none;
+    }
+
     position: relative;
     border-top: 1px solid $cu-border;
     padding: $base-spacing*2 0;
