--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -4,6 +4,7 @@
     width: 100%;
     background-color: $cu-off-white;
     position: relative;
+    margin-bottom: $base-spacing*2;
     li { 
       list-style-type: none;
       margin: 0;
