--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -24,6 +24,7 @@
     - left_column/calls_to_action_2
 
   right_column:
+    - right_column/callout_box_3
     - right_column/callout_box_1
     - right_column/callout_box_2
     - right_column/action_buttons
