Fix the border that was absolutely positioned.

--- a/app/assets/stylesheets/components/callout.scss
+++ b/app/assets/stylesheets/components/callout.scss
@@ -6,6 +6,7 @@
   padding: $base-spacing;
   margin: 0 0 $base-spacing 0;
   width: 195px;
+  position: relative;
   @include bp(l) {
     width: 100%;
   }
