fixed up callout header styling

--- a/app/assets/stylesheets/components/callout.scss
+++ b/app/assets/stylesheets/components/callout.scss
@@ -10,7 +10,7 @@
     width: 100%;
   }
 
-  .editableContent, h2, h3 {
+  .editableContent {
     padding: 0 $base-spacing;
     margin: $base-spacing 0;
   }
