fixed social follow us icons for modular

--- a/app/assets/stylesheets/components/callout.scss
+++ b/app/assets/stylesheets/components/callout.scss
@@ -10,7 +10,7 @@
     width: 100%;
   }
 
-  .editableContent {
+  .editableContent, h2 {
     padding: 0 $base-spacing;
     margin: $base-spacing 0;
   }
