--- a/app/assets/stylesheets/themes/copa__music.scss
+++ b/app/assets/stylesheets/themes/copa__music.scss
@@ -24,7 +24,7 @@
         background-image: url('/renderfile/6fef14a3c04d744c610b81dac0a8d082/_files/social_accounts/images/copa_music_follow_us.png'); 
         }
     #social_follow_us li span.hover_state, #social_follow_us li span.inactive_state {
-        background: url('/renderfile/6fef14a3c04d744c610b81dac0a8d082/_files/social_accounts/images/copa_music_icons.png');
+        background-image: url('/renderfile/6fef14a3c04d744c610b81dac0a8d082/_files/social_accounts/images/copa_music_icons.png');
         }
         
     .rounded-slider .info-container .blue{
