--- a/app/assets/stylesheets/themes/law.scss
+++ b/app/assets/stylesheets/themes/law.scss
@@ -80,7 +80,7 @@
     }
     #social_follow_us li span.hover_state,
     #social_follow_us li span.inactive_state {
-        background: image-url('law_icons.png');
+        background-image: image-url('law_icons.png');
     }
 
     .ie8 .slideDescription,
@@ -221,7 +221,7 @@
         background-image: image-url('law_follow_us.png');
         }
     #social_follow_us li span.hover_state, #social_follow_us li span.inactive_state {
-        background: image-url('law_icons.png');
+        background-image: image-url('law_icons.png');
         }
 
     .rounded-slider .info-container .blue{
