--- a/app/assets/stylesheets/themes/copa.scss
+++ b/app/assets/stylesheets/themes/copa.scss
@@ -34,7 +34,7 @@
     }
     li span {
       &.hover_state, &.inactive_state {
-        background: image-url('copa_icons.png');
+        background-image: image-url('copa_icons.png');
       }
     }
   }
