fixed form padding issues
fixed padding and border issues on primary and right column forms

--- a/app/assets/stylesheets/widgets/side_column/simple_form.scss
+++ b/app/assets/stylesheets/widgets/side_column/simple_form.scss
@@ -7,4 +7,12 @@
   input[type="submit"] {
     width: 100%;
   }
+
+  label {
+  	display: inline;
+  	margin-left: 5px;
+  }
+
+  padding: 15px;
+
 }
