--- a/app/views/widgets/right_column/_simple_form.html
+++ b/app/views/widgets/right_column/_simple_form.html
@@ -1,4 +1,4 @@
-<div class="simple-form-widget">
+<div class="simple-form-widget callout">
         
 <script src="/_files/js/form_validation.js" type="text/javascript"></script>
 <script language="JavaScript" type="text/javascript">
@@ -51,7 +51,7 @@ function validate() {
 //-->
 </script>
 
-<div class="callout short-form">
+<div class="short-form">
 <form action="https://webfarm.chapman.edu/mailservice/formmail.aspx" id="form1" method="post" name="form1" onsubmit="return validate(this);">
   <input name="recipient" type="hidden" value="llm@chapman.edu;steiner@chapman.edu;yeung@chapman.edu;gwillis@chapman.edu;dfinley@chapman.edu">
     <input name="sender" type="hidden" value="webmaster@chapman.edu">
