add music color variables
add $music-primary and secondary

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -80,6 +80,9 @@ $dodge-primary: #1f1f1f;
 $dodge-secondary: #000;
 $dodge-tertiary: #42413d;
 
+$music-primary: #793141;
+$music-secondary: #592530;
+
 $pharmacy-primary: #959300;
 $pharmacy-secondary: #636200;
 $pharmacy-tertiary: #dde2d5;
