fix path to music icon for follow us
background-image url had a leading / which it shouldn't have

--- a/app/assets/stylesheets/themes/copa__music.scss
+++ b/app/assets/stylesheets/themes/copa__music.scss
@@ -30,7 +30,7 @@
         }
 		
     #social_follow_us li span.hover_state, #social_follow_us li span.inactive_state {
-        background-image: url('/copa_music_icons.png');
+        background-image: url('copa_music_icons.png');
         }
         
     .rounded-slider .info-container .blue{
