--- a/app/views/widgets/single_column/_messaging_1_column_image.html
+++ b/app/views/widgets/single_column/_messaging_1_column_image.html
@@ -4,7 +4,7 @@
       <div class="section-message">
         <h4 class="category">category</h4>
         <h2 class="title">Sample Message Background Photo</h2>
-        <div class="body">
+        <div class="body editableContent">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
           </p>
