--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -142,7 +142,7 @@
 /* Light Text Variation */
 .messaging-widget__text-light {
 	background-color: black;
-	.title, .category, p { color: white; }
+	.title, .category, .body { color: white; }
 }
 
 
